--- a/css/sass/sections/_banner.scss
+++ b/css/sass/sections/_banner.scss
@@ -7,6 +7,9 @@
 
     -ms-flex-pack: center;
     justify-content: center;
+    
+    -ms-flex-align: center;
+    align-items: center;
 
 
     h1 {
@@ -25,14 +28,13 @@
     .banner-content {
         height: 247px;
         width: 1170px;
-        margin-left: 250px;
         margin-bottom: 100px;
 
         color: white;
         letter-spacing: 1px;
 
-            @media (max-width: 1050px) {
-                margin-left: 70px;
+            @media (max-width: $media-l) {          // MEDIUM BREAKPOINT CHANGES
+                margin-left: 250px;
             }
 
             @media (max-width: $media-m) {          // MEDIUM BREAKPOINT CHANGES
